--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
 	</header>
 
 	<div class="main-wrapper">
+		<div class="alert alert-danger fade show">
+			<strong>This site is work under progress. Some of the contents are not updated. Please visit my <a href="https://github.com/Ratansingh648" target="blank">github</a> profile to view the updated Details. Apologies for inconveniences.</strong> 
+			<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+		</div>
+	
 		<section class="about-me-section p-3 p-lg-5 theme-bg-light">
 			<div class="container">
 				<div class="profile-teaser row">
