--- a/academics.html
+++ b/academics.html
@@ -133,9 +133,12 @@
 						</div>
 
 						<div>
+							<button class="badge rounded-pill border mb-1">Statistical Machine Learning</button>
+							<button class="badge rounded-pill border mb-1">Pattern Recognition for Speech Signals</button>
+							<button class="badge rounded-pill border mb-1">Speech Signal Processing</button>
 							<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
-							<button class="badge rounded-pill border mb-1">Random Processes</button>
 							<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
+							<button class="badge rounded-pill border mb-1">Random Processes</button>
 							<button class="badge rounded-pill border mb-1">Special Problems</button>
 						</div>
 					</div>
@@ -154,13 +157,14 @@
 						</div>
 
 						<div>
-							<button class="badge rounded-pill border mb-1">Probability Theory and Random
-								Processes</button>
+							<button class="badge rounded-pill border mb-1">Probability Theory and Random Processes</button>
 							<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
 							<button class="badge rounded-pill border mb-1">Discrete Time Signal Processing</button>
 							<button class="badge rounded-pill border mb-1">Signals and Systems</button>
-							<button class="badge rounded-pill border mb-1">Numerical Techniques</button>
-							<button class="badge rounded-pill border mb-1">Engineering Mathematics I - IV</button>
+							<button class="badge rounded-pill border mb-1">Differential Calculus</button>
+							<button class="badge rounded-pill border mb-1">Integral Calculus</button>
+							<button class="badge rounded-pill border mb-1">Complex Algebra and Fourier Transforms</button>
+							<button class="badge rounded-pill border mb-1">Advanced Linear Algebra</button>
 							<button class="badge rounded-pill border mb-1">Numerical Techniques</button>
 						</div>
 					</div>
