--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						<div class="bio mb-4">I'm a software engineer specialised in frontend and backend development
 							for complex scalable web apps. I write about software development on <a class="text-link"
 								href="blog-home.html">my blog</a>. Want to know how I may help your project? Check out
-							my project <a class="text-link" href="projects.html">portfolio</a> and <a class="text-link"
+							my project <a class="text-link" href="portfolio.html">portfolio</a> and <a class="text-link"
 								href="resume.html">online resume</a>.
 						</div>
 						<!--//bio-->
@@ -209,8 +209,8 @@
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="cib-mysql me-2"></i><i class="cib-mongodb me-2" style="color:green"></i></div>
-							<h3 class="item-title">MySQL, MongoDB &amp; InfluxDB</h3>
+							<div class="item-icon"><i class="cib-mysql me-2"></i><i class="cib-mongodb me-2" style="color:green"></i><i class="cib-elastic-search me-2"></i></div>
+							<h3 class="item-title">MySQL, MongoDB &amp; Elastic Search</h3>
 							<div class="item-desc">Hands-on experience with multiple SQL and NoSQL database. Have worked on document based and time series databases</div>
 						</div>
 						<!--//item-inner-->
@@ -281,20 +281,41 @@
 							<div class="item-inner">
 								<div class="quote-holder">
 									<blockquote class="quote-content">
-										Ratan is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer
-										adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
-										natoque penatibus et magnis.
+										<p>Ratan had worked in my team for more than 3 years in credit-suisse. over
+										the course of time, he became my expert on NLP/NLU. He was a critical
+										member and was always learning on the job. I would want to talk about
+										Ratan's flexibility, you throw anything at him he will accept and pick it up
+										but what makes him different is that he will not only pick up but he will
+										slowly master the skill. This was not only true for emerging ML technologies,
+										neural embeddings that we had explored during our domain intelligent
+										deep learning framework build up, he also picked up Sybase, C++, Linux,
+										Java script, bootstrap, HTML5 and list keeps growing.</p>
+
+										<p>Even though he was a newbie in investment banking but he impressively
+										picked up counterparty risk domain.Another quality of Ratan that makes him 
+										special is his dedication and commitment towards his work. I also love his 
+										willingness of taking end to end ownership.</p>
+										
+										<p>Apart from being a full stack developer, Ratan is an excellent teacher, He has
+										played an exemplary role in training emerging technologies and also helped
+										in providing solutions linked to AI/ML to so many technologists in and
+										outside the bank. He is master of explaining complex algorithms and logic
+										with easy examples based on the technical acumen of audiences.
+										I am sure Ratan will be a very valuable asset to the organization where he
+										starts his next venture.
+										I would love to work with him again..
+										</p>
 									</blockquote>
 									<i class="fas fa-quote-left"></i>
 								</div>
 								<!--//quote-holder-->
 								<div class="source-holder">
 									<div class="source-profile">
-										<img src="assets/images/clients/profile-1.png" alt="image" />
+										<img src="assets/images/references/VJ.png" alt="image" />
 									</div>
 									<div class="meta">
-										<div class="name">Brandon James</div>
-										<div class="info">Project Manager, Google</div>
+										<div class="name">Vikas Johri</div>
+										<div class="info">Vice President (Innovation Lead - Machine Learning), Credit Suisse</div>
 									</div>
 								</div>
 							</div>
@@ -306,20 +327,25 @@
 							<div class="item-inner">
 								<div class="quote-holder">
 									<blockquote class="quote-content">
-										Ratan is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer
-										adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
-										natoque penatibus et magnis.
+										I had an opportunity to work with Ratan in his early years at Credit Suisse.
+										He is a talent packed geek, with numerous computer science algorithms at
+										tip of his fingers and a an equal sophestication of implementing them in
+										python in matter of minutes. He always had third view at looking at
+										problems and would come up with amzing solutions out of the box. His
+										programming skills are equally matched by his networking as well as soft
+										skills and not to forget, a genuinely humble nature. Keep up the good work
+										Ratan.									
 									</blockquote>
 									<i class="fas fa-quote-left"></i>
 								</div>
 								<!--//quote-holder-->
 								<div class="source-holder">
 									<div class="source-profile">
-										<img src="assets/images/clients/profile-2.png" alt="image" />
+										<img src="assets/images/references/SN.PNG" alt="image" />
 									</div>
 									<div class="meta">
-										<div class="name">Kate Sanders</div>
-										<div class="info">Project Manager, Uber</div>
+										<div class="name">Shivanand Naik</div>
+										<div class="info">Assistant Vice President, Credit Suisse</div>
 									</div>
 								</div>
 							</div>
@@ -331,20 +357,23 @@
 							<div class="item-inner">
 								<div class="quote-holder">
 									<blockquote class="quote-content">
-										Ratan is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer
-										adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
-										natoque penatibus et magnis.
+										Ratan has been a great asset to Credit Suisse and he has been working in
+										Machine learning space and has been successfully creating and delivering
+										many useful deliverables. His knowledge in machine learning algorithms,
+										tensorflow, deep learning and artificial intelligence is really par excellence.
+										He also trained associates in Credit Suisse in these technologies.
+										We are really proud to have Ratan as a great asset to our firm and wish him
 									</blockquote>
 									<i class="fas fa-quote-left"></i>
 								</div>
 								<!--//quote-holder-->
 								<div class="source-holder">
 									<div class="source-profile">
-										<img src="assets/images/clients/profile-3.png" alt="image" />
+										<img src="assets/images/references/RK.PNG" alt="image" />
 									</div>
 									<div class="meta">
-										<div class="name">James Lee</div>
-										<div class="info">Product Manager, Amazon</div>
+										<div class="name">Rocky Kumar</div>
+										<div class="info">Vice President (Production Services), Credit Suisse</div>
 									</div>
 								</div>
 							</div>
@@ -356,20 +385,24 @@
 							<div class="item-inner">
 								<div class="quote-holder">
 									<blockquote class="quote-content">
-										Ratan is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer
-										adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
-										natoque penatibus et magnis.
+										Working with Ratan has been a splendid experience for me. He worked with
+										our company on a couple of titles and aided us in reviewing our books with
+										his expertise. He has always been flexible and went out of the way to help us
+										out when needed. His experience and knowledge on Python including ML
+										specially is impeccable and helped us build quality products to publish in
+										the market. It is my pleasure recommending him for any new role where he
+										can utilise his knowledge to benefit the company and progress in his career.									
 									</blockquote>
 									<i class="fas fa-quote-left"></i>
 								</div>
 								<!--//quote-holder-->
 								<div class="source-holder">
 									<div class="source-profile">
-										<img src="assets/images/clients/profile-4.png" alt="image" />
+										<img src="assets/images/references/AS.PNG" alt="image" />
 									</div>
 									<div class="meta">
-										<div class="name">James Lee</div>
-										<div class="info">Product Manager, Amazon</div>
+										<div class="name">Anindya Sil</div>
+										<div class="info">Senior Acquisition Manager, Packt Publishing</div>
 									</div>
 								</div>
 							</div>
@@ -381,20 +414,24 @@
 							<div class="item-inner">
 								<div class="quote-holder">
 									<blockquote class="quote-content">
-										Ratan is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer
-										adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
-										natoque penatibus et magnis.
+										While working on different projects within Packt, I have known Ratan to be a
+										reliable reviewer. He has significant experience in Python and Machine
+										Learning space his knowledgeable insights have always helped in adding
+										value to the content. He is always very committed and focused on delivering
+										on time.
+										His contribution is highly valuable, and I highly recommend Ratan and
+										would be a great pleasure to work with him again.									
 									</blockquote>
 									<i class="fas fa-quote-left"></i>
 								</div>
 								<!--//quote-holder-->
 								<div class="source-holder">
 									<div class="source-profile">
-										<img src="assets/images/clients/profile-5.png" alt="image" />
+										<img src="assets/images/references/RY.PNG" alt="image" />
 									</div>
 									<div class="meta">
-										<div class="name">Olivia White</div>
-										<div class="info">Product Manager, Dropbox</div>
+										<div class="name">Rutuja Yerunkar</div>
+										<div class="info">Product Manager, Packt Publishing</div>
 									</div>
 								</div>
 							</div>
@@ -402,30 +439,6 @@
 						</div>
 						<!--//item-->
 
-						<div class="item">
-							<div class="item-inner">
-								<div class="quote-holder">
-									<blockquote class="quote-content">
-										Ratan is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer
-										adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
-										natoque penatibus et magnis.
-									</blockquote>
-									<i class="fas fa-quote-left"></i>
-								</div>
-								<!--//quote-holder-->
-								<div class="source-holder">
-									<div class="source-profile">
-										<img src="assets/images/clients/profile-6.png" alt="image" />
-									</div>
-									<div class="meta">
-										<div class="name">Samuel Reyes</div>
-										<div class="info">CTO, StartupHub</div>
-									</div>
-								</div>
-							</div>
-							<!--//item-inner-->
-						</div>
-						<!--//item-->
 					</div>
 					<!--//testimonial-carousel-->
 				</div>
@@ -447,14 +460,13 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/forest-logo-name-small.png" class="card-img" alt="image">
+									<img src="assets/images/projects/forest-logo-name-small.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
 										<h5 class="card-title"><a href="project.html" class="theme-link">Forest AI</a></h5>
-										<p class="card-text">Project intro lorem ipsum dolor sit amet, consectetuer
-											adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient
-											montes.</p>
+										<p class="card-text">Forest AI is smart cloud connected hardware
+											solution that brings next-gen security to forest.</p>
 										<p class="card-text"><small class="text-muted">Client: Forest AI</small></p>
 									</div>
 								</div>
@@ -476,14 +488,14 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/fusion-icon.png" class="card-img" alt="image">
+									<img src="assets/images/projects/fusion-icon.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
 										<h5 class="card-title"><a href="project.html" class="theme-link">Fusion</a></h5>
-										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-											ridiculus mus. </p>
+										<p class="card-text">Fusion is an open-source lightweight user behaviour analytics and 
+											engagement pltaform. Its built upon a simplified low-code mixpanel like analytics 
+											engine with visual analytics, push-notification and email/micro-surveys. </p>
 										<p class="card-text"><small class="text-muted">Client: Fusion</small></p>
 									</div>
 								</div>
@@ -505,14 +517,13 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/chatbot.png" class="card-img" alt="image">
+									<img src="assets/images/projects/chatbot.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
 										<h5 class="card-title"><a href="project.html" class="theme-link">SMEBot</a></h5>
-										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-											ridiculus mus. </p>
+										<p class="card-text">SMEBot is domain intelligent Deep Learning based contenxtual chatbot 
+											framework designed to ingest data documents and answer queries based on them.</p>
 										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
 									</div>
 								</div>
@@ -534,7 +545,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/credit-risk.jpg" class="card-img" alt="image">
+									<img src="assets/images/projects/credit-risk.jpg" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
@@ -581,8 +592,7 @@
 						<div class="card blog-post-card">
 							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">Top 3 JavaScript
-										Frameworks</a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-post.html">RPM Packaging of Python </a></h5>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
 									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
 									parturient...</p>
