--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
 							<div class="item-icon"><i class="cib-apache-spark me-2" style="color: #E25A1C;"></i></div>
-							<h3 class="item-title">Spark &amp; Hadoop</h3>
+							<h3 class="item-title">Spark &amp; Hadoop, </h3>
 							<div class="item-desc">Experienced in developing pipelines for data ingestion and processing using <strong>Hadoop</strong> and <strong>Spark</strong></div>
 						</div>
 						<!--//item-inner-->
@@ -256,11 +256,12 @@
 						</div>
 						<!--//item-inner-->
 					</div>
+
 					<!--//item-->
 				</div>
 				<!--//row-->
 				<div class="text-center py-3"><a href="services.html" class="btn btn-primary rounded-pill"><i
-							class="fa fa-chevron-circle-right me-2"></i>Services &amp; Pricing
+							class="fa fa-chevron-circle-right me-2"></i>Professional Experience
 
 					</a></div>
 
